Add new version jQuery

--- a/contenu/contact.html
+++ b/contenu/contact.html
@@ -9,7 +9,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
-        <script src="../jQuery.js"></script>
+        <!--Import jQuery-->
+        <!--<script src="../jQuery.js"></script>-->
+        <script> src="../documents/jquery-3.6.4.min.js"</script>
         
     </head>
     <header>
