--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
-    <script src="folder_name/jquery-1.12.0.js"></script>
+    <!--Import jQuery-->
+    <!--<script src="folder_name/jquery-1.12.0.js"></script>-->
+    <script> src="../Site-Web-Sergio-LOPEZ/documents/jquery-3.6.4.min.js"</script>
     
 </head>
 
