--- a/contenu/portfolio.html
+++ b/contenu/portfolio.html
@@ -10,11 +10,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+              integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <!--Import jQuery-->
         <!--<script src="folder_name/jquery-1.12.0.js"></script>-->
         <script> src="../documents/jquery-3.6.4.min.js"</script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
-              integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        
         
     </head>
     <header>
@@ -115,13 +116,13 @@
                     </div>
                   </div>
                   <div class="box-container">
-                    <div class="box5"> GitHub</div>
+                    <div class="box5"> GitHub / Git </div>
                     <div class="barra">
                       <div class="progreso" style="--w:20%"></div>
                     </div>
                   </div>
                   <div class="box-container">
-                      <div class="box5"> Vite </div>
+                      <div class="box5"> Bootstrap </div>
                       <div class="barra">
                         <div class="progreso" style="--w:20%"></div>
                       </div>
