Small changes in the form

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <main>
 
-        <h1 class="elegantshadow">Developpeur et designer UX/UI </h1>
+        <h1 class="elegantshadow">Développeur et designer UX/UI </h1>
 
     </main>
         
