--- a/contenu/contact.html
+++ b/contenu/contact.html
@@ -45,18 +45,18 @@
 
                        <legend>Vos coordonnées</legend> <!-- Titre du fieldset --> 
                        <label for="nom">Quel est votre nom ?</label>
-                       <input type="text" name="nom" id="nom" required autofocus>
+                       <input type="text" name="nom" id="nom" required autofocus disabled>
                        <label for="prenom">Quel est votre prénom ?</label>
-                       <input type="text" name="prenom" id="prenom" required>
+                       <input type="text" name="prenom" id="prenom" required disabled>
                        <label for="email">Quel est votre e-mail ?</label>
-                       <input type="email" name="email" id="email" required>
+                       <input type="email" name="email" id="email" required disabled>
 
                     </fieldset>
                     <fieldset>
                        <legend> Votre message </legend> <!-- Titre du fieldset -->
                        
                        <p>
-                          <textarea name="precisions" id="precisions" cols="40" rows="4"></textarea>
+                          <textarea name="precisions" id="precisions" cols="40" rows="4" disabled></textarea>
                        </p>
                        
                        <input class="button" type="submit" value="Envoyer">
