--- a/contenu/portfolio.html
+++ b/contenu/portfolio.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
-              integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <!--Import jQuery-->
         <!--<script src="folder_name/jquery-1.12.0.js"></script>-->
         <script> src="../documents/jquery-3.6.4.min.js"</script>
@@ -32,9 +32,9 @@
                       <img src="../images/logo2/logo_small_icon_only_inverted.png" alt="small icon SerLopez" width="30" height="30">
                   </a>
               </div2>
-              <a class="a_link" href="../a-propos.html"> À propos </a>
-              <a class="a_link" href="../contenu/portfolio.html"> Portfolio </a>
-              <a class="a_link" href="../contenu/contact.html"> Contact </a>
+              <a class="btn btn-outline-secondary btn-sm" href="../a-propos.html" role="button"> À propos </a>
+              <a class="btn btn-outline-secondary btn-sm active" href="../contenu/portfolio.html" role="button"> Portfolio </a>              
+              <a class="btn btn-outline-secondary btn-sm" href="../contenu/contact.html"> Contact </a>
   
           </div>
       </nav>
