--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!--Import jQuery-->
     <!--<script src="folder_name/jquery-1.12.0.js"></script>-->
     <script> src="../Site-Web-Sergio-LOPEZ/documents/jquery-3.6.4.min.js"</script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
     
 </head>
@@ -31,9 +33,9 @@
                         <img src="images/logo2/logo_small_icon_only_inverted.png" alt="small icon SerLopez" width="30" height="30">
                     </a>
                 </div2>
-                <a class="a_link" href="a-propos.html"> À propos </a>
-                <a class="a_link" href="contenu/portfolio.html"> Portfolio </a>
-                <a class="a_link" href="contenu/contact.html"> Contact </a>
+                <a class="btn btn-outline-secondary btn-sm" href="a-propos.html"> À propos </a>
+                <a class="btn btn-outline-secondary btn-sm" href="contenu/portfolio.html"> Portfolio </a>
+                <a class="btn btn-outline-secondary btn-sm" href="contenu/contact.html"> Contact </a>
 
             </div>
         </nav>
